Fix register login touching scrollbar on mobile

--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -48,6 +48,10 @@
         display: flex;
         flex-direction: row;
         gap: 1rem;
+
+        @include m.mobile {
+            margin-right: 1rem;
+        }
     }
 
     &__ProfileDropdown {
